revert to 809cddb38f2c60eb365a0ddadfc6108ad87bca5c

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "ionic-toast",
   "version": "0.2.0",
   "description": "A toast for IONIC framework",
-  "main": [
-    "./dist/ionic-toast.js",
-    "./dist/style.css"
-  ],
+  "main": "./dist/ionic-toast.js",
   "scripts": {},
   "author": "https://github.com/rajeshwarpatlolla, rajeshwar.patlolla@gmail.com",
   "license": "MIT",
